...
        },
        // 右側：操作メニュー（鉛筆アイコン）
        trailingContent = {
            Box {
                IconButton(
                    onClick = { showItemMenu = true },
                    modifier = Modifier.testTag("UserListItem_MenuButton")
                ) { 
                    Icon(
                        imageVector = Icons.Rounded.ModeEdit,
                        contentDescription = stringResource(R.string.main_desc_op_menu)
                    ) 
                }
                DropdownMenu(expanded = showItemMenu, onDismissRequest = { showItemMenu = false }) {
                    // 利用者情報を編集
                    DropdownMenuItem(
                        text = { Text(stringResource(R.string.main_edit_user_info)) }, 
                        leadingIcon = { Icon(Icons.Rounded.ModeEdit, contentDescription = null) }, 
                        onClick = { showItemMenu = false; onAction(MainUiAction.EditUser(person)) },
                        modifier = Modifier.testTag("UserListItem_MenuItem_Edit")
                    )
                    // 緊急連絡先の管理
                    DropdownMenuItem(
                        text = { Text(stringResource(R.string.medical_contacts_manage_label)) },
                        leadingIcon = { Icon(Icons.Rounded.Phone, contentDescription = null) },
                        onClick = { showItemMenu = false; onAction(MainUiAction.EmergencyContactManageClick(person)) },
...
