...
            )
        },
        snackbarHost = { SnackbarHost(snackbarHostState) },
        floatingActionButton = { 
            FloatingActionButton(
                onClick = { onAction(MainUiAction.AddClick) }, 
                modifier = Modifier.testTag("MainScreen_AddButton")
            ) { 
                Icon(Icons.Rounded.PersonAddAlt1, contentDescription = stringResource(R.string.main_user_registration)) 
            } 
        }
    ) { paddingValues ->
        Box(modifier = Modifier.fillMaxSize().padding(paddingValues)) {
...
                            )
                        } else {
                            LazyColumn(
                                modifier = Modifier
                                    .fillMaxWidth()
                                    .weight(1f)
                                    .testTag("MainScreen_UserList"),
                                state = lazyListState,
                                contentPadding = PaddingValues(bottom = 80.dp)
                            ) {
                                items(userList, key = { it.person.id }) { userUiState ->
                                    val isOperating = when (operation) {
                                        is PersonListOperation.Deleting -> operation.targetId == userUiState.person.id
...
